--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="container"> 
     <div class="title">
       <h1>Nic dwa razy</h1>
-    <h2>by Wisława Szymborska</h2>
+    <h2>Wisława Szymborska</h2>
     </div>
     <div class="text">
       <p>Nic dwa razy się nie zda­rza
